noaa_weather_cli/src/output/render/snapshots/noaa_weather__output__render__tests__active_alert_counts.snap
---
source: noaa_weather_cli/src/output/render/tests.rs
expression: "options(ColorMode::Never, 100).render(&counts.summarize())"
---
Active alerts

┌────────┬─────┐
│ Total  ┆ 303 │
│ Land   ┆ 137 │
│ Marine ┆ 166 │
└────────┴─────┘

By area
┌──────┬────────┐
│ Area ┆ Alerts │
╞══════╪════════╡
│ AK   ┆      3 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ AL   ┆      2 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ AN   ┆      4 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ AR   ┆      8 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ AZ   ┆      1 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ CA   ┆      7 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ CO   ┆      1 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ DC   ┆      1 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ DE   ┆      2 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ FL   ┆      2 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ GA   ┆      1 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ GM   ┆      2 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ GU   ┆      2 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ HI   ┆      2 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ IA   ┆      5 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ ID   ┆      2 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ IL   ┆      9 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ IN   ┆      7 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ KS   ┆      7 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ KY   ┆      6 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ LA   ┆      2 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ MD   ┆      6 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ MI   ┆      4 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ MO   ┆      9 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ MP   ┆      2 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ MS   ┆      3 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ MT   ┆      6 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ NC   ┆     11 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ NE   ┆      3 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ NJ   ┆      2 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ NV   ┆      1 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ NY   ┆      3 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ OH   ┆      9 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ OK   ┆      9 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ OR   ┆      2 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ PA   ┆      6 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ PH   ┆      2 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ PK   ┆    142 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ PR   ┆      2 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ PZ   ┆     16 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ SC   ┆      2 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ TN   ┆      5 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ TX   ┆     19 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ VA   ┆      8 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ VI   ┆      1 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ WA   ┆      5 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ WV   ┆      4 │
├╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ WY   ┆      1 │
└──────┴────────┘

By region
┌────────┬────────┐
│ Region ┆ Alerts │
╞════════╪════════╡
│ AL     ┆    142 │
├╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ AT     ┆      4 │
├╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ GM     ┆      2 │
├╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ PA     ┆     16 │
├╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ PI     ┆      2 │
└────────┴────────┘

note: 2935 zones have active alerts
